--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,19 @@
 .App {
-  text-align: center;
+  text-align: left;
+  font-size: 1rem;
+  color: #111;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 42px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #eee;
   height: 150px;
   padding: 20px;
-  color: white;
 }
 
 .App-title {
   font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
