--- a/src/components/Halls/Halls.css
+++ b/src/components/Halls/Halls.css
@@ -1,13 +1,3 @@
-.Hall {
-	display: inline-block;
-	border-radius: 3px;
-	margin: 20px 20px 0 0;
-	background: #ff9d00;
-	padding: 5px 15px;
-	color: #fff;
-	cursor: pointer;
-}
-
 .Halls {
-
+	margin: 20px 0;
 }
