--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,27 @@
 .App {
-  text-align: left;
-  font-size: 1rem;
-  color: #111;
+	text-align: left;
+	font-size: 1rem;
+	color: #111;
 }
 
 .App-header {
-  background: #f0f0f0;
-  box-sizing: border-box;
-  min-height: 85px;
-  padding: 15px;
+	background: #f0f0f0;
+	box-sizing: border-box;
+	min-height: 85px;
+	padding: 15px;
+}
+
+.App-header:after {
+	clear: both;
+	content: '';
+	display: table;
+}
+
+.App-main {
+	padding: 15px;
 }
 
 .App-title {
-  font-size: 1.5em;
+	font-size: 1.5em;
+	margin-top: 15px;
 }
