--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .App-header {
 	background: #f0f0f0;
+	border-bottom: 1px solid #930049;
 	box-sizing: border-box;
 	min-height: 85px;
 	padding: 15px;
