--- a/src/components/Halls/Hall/Hall.css
+++ b/src/components/Halls/Hall/Hall.css
@@ -1,9 +1,10 @@
 .Hall {
-    display: inline-block;
-    border-radius: 3px;
-    margin: 20px 20px 0 0;
     background: #ff9d00;
-    padding: 5px 15px;
+    border-top: 1px solid #fff;
     color: #fff;
     cursor: pointer;
+    display: block;
+    max-width: 300px;
+    padding: 5px 15px;
+    text-align: center;
 }
