--- a/src/components/UI/common.css
+++ b/src/components/UI/common.css
@@ -1,16 +1,10 @@
-html {
-	color: #111;
-	font-family: 'Roboto', sans-serif;
-	font-size: 14px;
-}
-
 .h1 {
-	font-size: 2em;
+	font-size: 2rem;
 	font-weight: 700;
 }
 
 .h2 {
-	font-size: 1.5em;
+	font-size: 1.5rem;
 	font-weight: 700;
 }
 
