--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+html {
+  color: #111;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
