--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 	border-bottom: 1px solid #930049;
 	box-sizing: border-box;
 	min-height: 85px;
-	padding: 15px;
+	padding: 15px 15px 0;
 }
 
 .App-header:after {
@@ -22,6 +22,10 @@
 }
 
 .App-title {
-	font-size: 1.5rem;
-	margin-top: 15px;
+	clear: left;
+	color: #930049;
+	float: left;
+	font-size: 2.4rem;
+	font-weight: 700;
+	margin: 0.5rem 0;
 }
