--- a/src/components/UI/common.css
+++ b/src/components/UI/common.css
@@ -1,25 +1,65 @@
-.h1 {
-	font-size: 2rem;
-	font-weight: 700;
-}
-
 .h2 {
 	font-size: 1.5rem;
 	font-weight: 700;
 }
-
-button {
-	background-color: #930049;
+input[type="text"],
+input[type="password"],
+.btn {
+	background: #fff;
+	border: 1px solid #707880;
 	border-radius: 4px;
-	border: 2px solid #b20058;
-	color: #eee;
-	cursor: pointer;
-	font-size: 1rem;
-	line-height: 1;
-	padding: 3px 12px 4px;
-	transition: background-color 0.2s ease;
+	color: #707880;
+	font-weight: 700;
+	height: 2.5rem;
+	line-height: 2.5rem;
+	margin: 5px 0;
+	padding: 0 15px;
+	transform: all 0.3s ease;
 }
 
-button:hover {
-	background-color: #b20058;
+.btn {
+	cursor: pointer;
+	text-align: center;
+}
+
+.input[type="text"]:focus,
+.input[type="password"]:focus,
+.btn:hover {
+	border-color: #930049;
+	box-shadow: 0 0 20px rgba(0,0,0,0.3) inset;
+	color: #930049;
+}
+
+.btn:focus {
+	outline: none;
+}
+
+.table {
+	display: table;
+}
+
+.tr {
+	display: table-row;
+}
+
+.td {
+	display: table-cell;
+}
+
+
+
+input[type="text"],
+input[type="password"] {
+	background: #fff;
+	border: 1px solid #707880;
+	border-radius: 4px;
+	color: #707880;
+	cursor: pointer;
+	font-weight: 700;
+	height: 2.5rem;
+	line-height: 2.5rem;
+	margin: 5px 0;
+	padding: 0 15px;
+	text-align: center;
+	transform: all 0.3s ease;
 }
